cmake_minimum_required(VERSION 3.14)
project(UCFQuSim)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

include_directories(.)
include_directories(core)
include_directories(core/gates)
include_directories(generator)
include_directories(evaluator)
include_directories(util)

add_executable(UCFQuSim
        core/gates/CHadamard.cpp
        core/gates/CHadamard.h
        core/gates/CNot.cpp
        core/gates/CNot.h
        core/gates/CRz.cpp
        core/gates/CRz.h
        core/gates/CU1.cpp
        core/gates/CU1.h
        core/gates/CU3.cpp
        core/gates/CU3.h
        core/gates/CY.cpp
        core/gates/CY.h
        core/gates/CZ.cpp
        core/gates/CZ.h
        core/gates/Hadamard.cpp
        core/gates/Hadamard.h
        core/gates/Identity.cpp
        core/gates/Identity.h
        core/gates/Measure.cpp
        core/gates/Measure.h
        core/gates/NoOp.cpp
        core/gates/NoOp.h
        core/gates/Not.cpp
        core/gates/Not.h
        core/gates/QuGate.cpp
        core/gates/QuGate.h
        core/gates/QuGateFactory.cpp
        core/gates/QuGateFactory.h
        core/gates/Rx.cpp
        core/gates/Rx.h
        core/gates/Ry.cpp
        core/gates/Ry.h
        core/gates/Rz.cpp
        core/gates/Rz.h
        core/gates/S.cpp
        core/gates/S.h
        core/gates/Sdg.cpp
        core/gates/Sdg.h
        core/gates/Swap.cpp
        core/gates/Swap.h
        core/gates/T.cpp
        core/gates/T.h
        core/gates/Tdg.cpp
        core/gates/Tdg.h
        core/gates/Toffoli.cpp
        core/gates/Toffoli.h
        core/gates/U1.cpp
        core/gates/U1.h
        core/gates/U2.cpp
        core/gates/U2.h
        core/gates/U3.cpp
        core/gates/U3.h
        core/gates/X.cpp
        core/gates/X.h
        core/gates/Y.cpp
        core/gates/Y.h
        core/gates/Z.cpp
        core/gates/Z.h
        generator/QuCircuitGenerator.cpp
        generator/QuCircuitGenerator.h
        generator/QuMappingInitializer.cpp
        generator/QuMappingInitializer.h
        generator/QuMappingInitializerZulehner.cpp
        generator/QuMappingInitializerZulehner.h
        generator/QuMultiGenerator.cpp
        generator/QuMultiGenerator.h
        generator/QuSmartSwapper.cpp
        generator/QuSmartSwapper.h
        generator/QuSwapStrategy.cpp
        generator/QuSwapStrategy.h
        core/QuArchitecture.cpp
        core/QuArchitecture.h
        core/QuBit.cpp
        core/QuBit.h
        core/QuCircuit.cpp
        core/QuCircuit.h
        core/QuMapping.cpp
        core/QuMapping.h
        evaluator/QuCircuitEvaluator.cpp
        evaluator/QuCircuitEvaluator.h
        evaluator/QuMultiEvaluator.cpp
        evaluator/QuMultiEvaluator.h
        util/Result.cpp
        util/Result.h
        util/Util.cpp
        util/Util.h
        algorithm/AllShortestPathsFinder.cpp
        algorithm/AllShortestPathsFinder.h
        main.cpp
        algorithm/ShortestPathFinder.cpp
        algorithm/ShortestPathFinder.h algorithm/AllPairShortestPathFinder.cpp algorithm/AllPairShortestPathFinder.h generator/PriorityGraph.cpp generator/PriorityGraph.h generator/PriorityNode.cpp generator/PriorityNode.h generator/QuCircuitLayerManager.cpp generator/QuCircuitLayerManager.h core/Config.h generator/QuCircuitOptimizer.cpp generator/QuCircuitOptimizer.h util/Constants.h)
